salesforce-main/src/main/default/objects/Activity/Activity.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>