salesforce-main/src/main/default/objects/Activity/fields/Actions__c.field-meta.xml
<CustomField>
    <fullName>Actions__c</fullName>
    <description>What actions came out of this conversation?</description>
    <label>Actions</label>
    <type>TextArea</type>
</CustomField>