salesforce-main/src/main/default/objects/Activity/fields/APAC_Connections__c.field-meta.xml
<CustomField>
    <fullName>APAC_Connections__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do you think the client would be willing to connect you with colleagues in APAC?</description>
    <label>APAC Connections</label>
    <type>Checkbox</type>
</CustomField>