salesforce-main/src/main/default/objects/Activity/fields/Assigned_Team__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Team__c</fullName>
    <description>Role of the task assignee. This is a static capture to identify which team (role) the task was undertaken in. This is to prevent loss of this data should the assignee move teams &amp; acquire a new role.</description>
    <label>Assigned Team</label>
    <length>255</length>
    <type>Text</type>
</CustomField>