salesforce-main/src/main/default/objects/Activity/fields/BNR_Banner_ID__c.field-meta.xml
<CustomField>
    <fullName>BNR_Banner_ID__c</fullName>
    <label>Banner ID</label>
    <length>9</length>
    <type>Text</type>
</CustomField>