salesforce-main/src/main/default/objects/Activity/fields/BNR_Comment_Code__c.field-meta.xml
<CustomField>
    <fullName>BNR_Comment_Code__c</fullName>
    <label>Comment Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>