salesforce-main/src/main/default/objects/Activity/fields/BNR_Comment_Code_Display__c.field-meta.xml
<CustomField>
    <fullName>BNR_Comment_Code_Display__c</fullName>
    <formula>CASE( BNR_Comment_Code__c , 
&quot;01&quot;,&quot;Student Contact&quot;, 
&quot;02&quot;,&quot;Correspondence&quot;, 
&quot;03&quot;,&quot;Advising (test)&quot;, 
&quot;04&quot;,&quot;Student Inquiry&quot;, 
&quot;05&quot;,&quot;Change Programmes&quot;, 
&quot;06&quot;,&quot;Reassessment&quot;, 
&quot;07&quot;,&quot;Conduct&quot;, 
&quot;CA&quot;,&quot;Ceremony Attendees&quot;, 
&quot;&quot; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Comment Code Display</label>
    <type>Text</type>
</CustomField>