salesforce-main/src/main/default/objects/Activity/fields/BNR_Comment_Date__c.field-meta.xml
<CustomField>
    <fullName>BNR_Comment_Date__c</fullName>
    <label>Comment Date</label>
    <type>Date</type>
</CustomField>