salesforce-main/src/main/default/objects/Activity/fields/BNR_Confidential__c.field-meta.xml
<CustomField>
    <fullName>BNR_Confidential__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confidential</label>
    <type>Checkbox</type>
</CustomField>