salesforce-main/src/main/default/objects/Activity/fields/BPP_APAC_Business_Aware__c.field-meta.xml
<CustomField>
    <fullName>BPP_APAC_Business_Aware__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Did you make the client aware of BPP&apos;s APAC business?</description>
    <label>BPP APAC Business Aware</label>
    <type>Checkbox</type>
</CustomField>