salesforce-main/src/main/default/objects/Activity/fields/Brochure_Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>Brochure_Delivery_Method__c</fullName>
    <description>Indicates which postal address a brochure request should be sent to when requested for a student account.</description>
    <inlineHelpText>Indicates which postal address a brochure request should be sent to when requested for a student account.</inlineHelpText>
    <label>Brochure Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Mailing Address</fullName>
            </value>
            <value>
                <fullName>Home Address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>