salesforce-main/src/main/default/objects/Activity/fields/Call_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Call_Outcome__c</fullName>
    <description>NVM disposition code - to capture outcome of the call. Dependant on Cycle Stage</description>
    <label>Call Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Cycle_Stage__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Left Voicemail</fullName>
            </value>
            <value>
                <fullName>No Working Number</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
            <value>
                <fullName>No Further Action</fullName>
            </value>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>Sale</fullName>
            </value>
            <value>
                <fullName>Application Process</fullName>
            </value>
            <value>
                <fullName>Converted to Application</fullName>
            </value>
            <value>
                <fullName>Incomplete Application</fullName>
            </value>
            <value>
                <fullName>Offer Call</fullName>
            </value>
            <value>
                <fullName>Offer Documents</fullName>
            </value>
            <value>
                <fullName>Converted to Accepted</fullName>
            </value>
            <value>
                <fullName>Deposit Follow Up</fullName>
            </value>
            <value>
                <fullName>Acceptance Call</fullName>
            </value>
            <value>
                <fullName>Declined Offer</fullName>
            </value>
            <value>
                <fullName>Application Rejected</fullName>
            </value>
            <value>
                <fullName>Welcome Call</fullName>
            </value>
            <value>
                <fullName>First Installment</fullName>
            </value>
            <value>
                <fullName>Direct Debit</fullName>
            </value>
            <value>
                <fullName>Documents Submitted</fullName>
            </value>
            <value>
                <fullName>Pre-registration</fullName>
            </value>
            <value>
                <fullName>Registration</fullName>
            </value>
            <value>
                <fullName>Deferral Request</fullName>
            </value>
            <value>
                <fullName>Cancellation Request</fullName>
            </value>
            <value>
                <fullName>Hot Transfer</fullName>
            </value>
            <value>
                <fullName>Course Enquiry</fullName>
            </value>
            <value>
                <fullName>VLE</fullName>
            </value>
            <value>
                <fullName>Study Materials</fullName>
            </value>
            <value>
                <fullName>Finance &amp; Billing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>