salesforce-main/src/main/default/objects/Activity/fields/Call_Outcome_Reason__c.field-meta.xml
<CustomField>
    <fullName>Call_Outcome_Reason__c</fullName>
    <description>NVM disposition code - to capture details of call outcome. Dependant on Call Outcome</description>
    <label>Call Outcome Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Call_Outcome__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>University</fullName>
            </value>
            <value>
                <fullName>University - Agent</fullName>
            </value>
            <value>
                <fullName>Direct Sales</fullName>
            </value>
            <value>
                <fullName>Business Development</fullName>
            </value>
            <value>
                <fullName>Recruitment Service</fullName>
            </value>
            <value>
                <fullName>Already Booked</fullName>
            </value>
            <value>
                <fullName>Request No Further Contact</fullName>
            </value>
            <value>
                <fullName>Ineligible (academic)</fullName>
            </value>
            <value>
                <fullName>Ineligible (visa)</fullName>
            </value>
            <value>
                <fullName>Ineligible (language)</fullName>
            </value>
            <value>
                <fullName>Invalid Contact Details</fullName>
            </value>
            <value>
                <fullName>Funding Restrictions</fullName>
            </value>
            <value>
                <fullName>Busy Callback Arranged</fullName>
            </value>
            <value>
                <fullName>Programme Query</fullName>
            </value>
            <value>
                <fullName>Finance Query</fullName>
            </value>
            <value>
                <fullName>Dates &amp; Prices Request</fullName>
            </value>
            <value>
                <fullName>Dates &amp; Prices Not Available</fullName>
            </value>
            <value>
                <fullName>Awaiting Booking Completion</fullName>
            </value>
            <value>
                <fullName>Awaiting Training Request Form</fullName>
            </value>
            <value>
                <fullName>Faculty Call Arranged</fullName>
            </value>
            <value>
                <fullName>Studying With Another Provider</fullName>
            </value>
            <value>
                <fullName>No Longer Interest In Studying</fullName>
            </value>
            <value>
                <fullName>Timetable Query</fullName>
            </value>
            <value>
                <fullName>Application Process</fullName>
            </value>
            <value>
                <fullName>Documents Requested</fullName>
            </value>
            <value>
                <fullName>Incomplete Information</fullName>
            </value>
            <value>
                <fullName>First Offer Call</fullName>
            </value>
            <value>
                <fullName>Follow Up Offer Call</fullName>
            </value>
            <value>
                <fullName>Awaiting Results</fullName>
            </value>
            <value>
                <fullName>Re-sitting Course</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>