salesforce-main/src/main/default/objects/Activity/fields/Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date__c</fullName>
    <description>SAM Integration Best Action Completion Date</description>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>