salesforce-main/src/main/default/objects/Activity/fields/Contact_Request_Task__c.field-meta.xml
<CustomField>
    <fullName>Contact_Request_Task__c</fullName>
    <description>Boolean field that holds a TRUE value if the task is a Contact Request task.</description>
    <formula>RecordType.Name = &quot;Contact Request&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Request Task?</label>
    <type>Checkbox</type>
</CustomField>