salesforce-main/src/main/default/objects/Activity/fields/Conversation_Summary__c.field-meta.xml
<CustomField>
    <fullName>Conversation_Summary__c</fullName>
    <description>Please summarise the content of your conversation with the client. Be as specific as possible: detail the programmes discussed, competitor information collected, information about the client&apos;s structure and upcoming internal changes, and any other information you think might be commercially useful</description>
    <label>Conversation Summary</label>
    <type>TextArea</type>
</CustomField>