salesforce-main/src/main/default/objects/Activity/fields/Future_Skills_Discussed__c.field-meta.xml
<CustomField>
    <fullName>Future_Skills_Discussed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Did you discuss &apos;future skills&apos; with the client?</description>
    <label>Future Skills Discussed</label>
    <type>Checkbox</type>
</CustomField>