salesforce-main/src/main/default/objects/Activity/fields/GA_Client_ID__c.field-meta.xml
<CustomField>
    <fullName>GA_Client_ID__c</fullName>
    <description>Google Analytics field used for tracking individuals</description>
    <label>GA Client ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>