salesforce-main/src/main/default/objects/Activity/fields/GClid_Information__c.field-meta.xml
<CustomField>
    <fullName>GClid_Information__c</fullName>
    <description>Google Analytics field used for tracking individuals</description>
    <label>GClid Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>