salesforce-main/src/main/default/objects/Activity/fields/Interaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Type__c</fullName>
    <description>Type of activity that user has engaged in via Direct Apps system</description>
    <label>Interaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Request For Information</fullName>
            </value>
            <value>
                <fullName>Apprenticeship</fullName>
            </value>
            <value>
                <fullName>University</fullName>
            </value>
            <value>
                <fullName>Scholarship</fullName>
            </value>
            <value>
                <fullName>Event Registration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>