salesforce-main/src/main/default/objects/Activity/fields/Job_Roles_Discussed__c.field-meta.xml
<CustomField>
    <fullName>Job_Roles_Discussed__c</fullName>
    <label>Job Roles Discussed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Audit</fullName>
            </value>
            <value>
                <fullName>Brokerage</fullName>
            </value>
            <value>
                <fullName>Claims</fullName>
            </value>
            <value>
                <fullName>Customer service</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Human resources</fullName>
            </value>
            <value>
                <fullName>Internal audit</fullName>
            </value>
            <value>
                <fullName>Investment management</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Nurse</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Paralegal</fullName>
            </value>
            <value>
                <fullName>Project management</fullName>
            </value>
            <value>
                <fullName>Relationship management</fullName>
            </value>
            <value>
                <fullName>Risk</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Solicitor</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
            <value>
                <fullName>Underwriting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>