salesforce-main/src/main/default/objects/Activity/fields/Lead_Source_Title__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Title__c</fullName>
    <label>Lead Source Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>