salesforce-main/src/main/default/objects/Activity/fields/Lead_Subsource__c.field-meta.xml
<CustomField>
    <fullName>Lead_Subsource__c</fullName>
    <label>Lead Subsource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>