salesforce-main/src/main/default/objects/Activity/fields/Line_Manager__c.field-meta.xml
<CustomField>
    <fullName>Line_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Contact that is used to identify the Line Manager for Application requests</description>
    <label>Line Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.IsPersonAccount</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <infoMessage>Line Manager can&apos;t be a Student Account</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Events (Line Manager)</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>