salesforce-main/src/main/default/objects/Activity/fields/Market_Insight__c.field-meta.xml
<CustomField>
    <fullName>Market_Insight__c</fullName>
    <description>During your conversation, did you collect any market insight? If so, please note it down here. (Market insight is anything that&apos;s useful to BPP&apos;s wider business, and could include legislation that&apos;s affecting the client&apos;s sector, information about their competitors, or news and current affairs that the client mentions in conversations)</description>
    <label>Market Insight</label>
    <type>TextArea</type>
</CustomField>