salesforce-main/src/main/default/objects/Activity/fields/Marketing_Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Campaign_ID__c</fullName>
    <label>Marketing Campaign ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>