salesforce-main/src/main/default/objects/Activity/fields/Marketing_Contact_Preference__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Contact_Preference__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked = Opted Out</inlineHelpText>
    <label>Marketing Contact Preference</label>
    <type>Checkbox</type>
</CustomField>