salesforce-main/src/main/default/objects/Activity/fields/mh_Buying_Influence_Concept__c.field-meta.xml
<CustomField>
    <fullName>mh_Buying_Influence_Concept__c</fullName>
    <description>SAM Integration</description>
    <label>Buying Influence Concept</label>
    <type>TextArea</type>
</CustomField>