salesforce-main/src/main/default/objects/Activity/fields/mh_Confirmation_Questions__c.field-meta.xml
<CustomField>
    <fullName>mh_Confirmation_Questions__c</fullName>
    <description>SAM Integration</description>
    <label>Confirmation Questions</label>
    <type>TextArea</type>
</CustomField>