salesforce-main/src/main/default/objects/Activity/fields/mh_Credibility__c.field-meta.xml
<CustomField>
    <fullName>mh_Credibility__c</fullName>
    <description>SAM Integration</description>
    <label>Credibility</label>
    <type>TextArea</type>
</CustomField>