salesforce-main/src/main/default/objects/Activity/fields/mh_Managers_Notes__c.field-meta.xml
<CustomField>
    <fullName>mh_Managers_Notes__c</fullName>
    <description>SAM Integration</description>
    <label>Managers Notes</label>
    <type>TextArea</type>
</CustomField>