salesforce-main/src/main/default/objects/Activity/fields/mh_Managers_Notes_Exist__c.field-meta.xml
<CustomField>
    <fullName>mh_Managers_Notes_Exist__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SAM Integration</description>
    <label>Managers Notes Exist</label>
    <type>Checkbox</type>
</CustomField>