salesforce-main/src/main/default/objects/Activity/fields/mh_Managers_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>mh_Managers_Review_Date__c</fullName>
    <description>SAM Integration</description>
    <label>Managers Review Date</label>
    <type>Date</type>
</CustomField>