salesforce-main/src/main/default/objects/Activity/fields/mh_Minimum_Acceptable_Action__c.field-meta.xml
<CustomField>
    <fullName>mh_Minimum_Acceptable_Action__c</fullName>
    <description>SAM Integration</description>
    <label>Minimum Acceptable Action</label>
    <type>TextArea</type>
</CustomField>