salesforce-main/src/main/default/objects/Activity/fields/mh_New_Information_Questions__c.field-meta.xml
<CustomField>
    <fullName>mh_New_Information_Questions__c</fullName>
    <description>SAM Integration</description>
    <label>New Information Questions</label>
    <type>TextArea</type>
</CustomField>