salesforce-main/src/main/default/objects/Activity/fields/mh_Possible_Basic_Issues__c.field-meta.xml
<CustomField>
    <fullName>mh_Possible_Basic_Issues__c</fullName>
    <description>SAM Integration</description>
    <label>Possible Basic Issues</label>
    <type>TextArea</type>
</CustomField>