salesforce-main/src/main/default/objects/Activity/fields/mh_Post_Call_Assessment__c.field-meta.xml
<CustomField>
    <fullName>mh_Post_Call_Assessment__c</fullName>
    <description>SAM Integration</description>
    <label>Post Call Assessment</label>
    <type>TextArea</type>
</CustomField>