salesforce-main/src/main/default/objects/Activity/fields/mh_Post_Call_Assessment_Exists__c.field-meta.xml
<CustomField>
    <fullName>mh_Post_Call_Assessment_Exists__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SAM Integration</description>
    <label>Post Call Assessment Exists</label>
    <type>Checkbox</type>
</CustomField>