salesforce-main/src/main/default/objects/Activity/fields/mh_Unique_Strengths__c.field-meta.xml
<CustomField>
    <fullName>mh_Unique_Strengths__c</fullName>
    <description>SAM Integration</description>
    <label>Unique Strengths</label>
    <type>TextArea</type>
</CustomField>