salesforce-main/src/main/default/objects/Activity/fields/mh_Valid_Business_Reason__c.field-meta.xml
<CustomField>
    <fullName>mh_Valid_Business_Reason__c</fullName>
    <description>SAM Integration</description>
    <label>Valid Business Reason</label>
    <type>TextArea</type>
</CustomField>