salesforce-main/src/main/default/objects/Activity/fields/New_Contact__c.field-meta.xml
<CustomField>
    <fullName>New_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this a new contact?</description>
    <label>New Contact</label>
    <type>Checkbox</type>
</CustomField>