salesforce-main/src/main/default/objects/Activity/fields/Organisational_Capability_Decline_Reason__c.field-meta.xml
<CustomField>
    <fullName>Organisational_Capability_Decline_Reason__c</fullName>
    <description>If no*, why are they not interested in organisational capability?

*Did you discuss organisational capability mapping with the client?</description>
    <label>Organisational Capability Decline Reason</label>
    <type>TextArea</type>
</CustomField>