salesforce-main/src/main/default/objects/Activity/fields/Organisational_Capability_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Organisational_Capability_Mapping__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Did you discuss organisational capability mapping with the client?</description>
    <label>Organisational Capability Mapping</label>
    <type>Checkbox</type>
</CustomField>