salesforce-main/src/main/default/objects/Activity/fields/Organisational_Capability_Timeframe__c.field-meta.xml
<CustomField>
    <fullName>Organisational_Capability_Timeframe__c</fullName>
    <description>If yes*, when might they be interested?

*Did you discuss organisational capability mapping with the client?</description>
    <label>Organisational Capability Timeframe</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Organisational_Capability_Mapping__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Next 0-3 months</fullName>
            </value>
            <value>
                <fullName>Next 4-6 months</fullName>
            </value>
            <value>
                <fullName>Next 7-12 months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>