salesforce-main/src/main/default/objects/Activity/fields/Scholarship_Name__c.field-meta.xml
<CustomField>
    <fullName>Scholarship_Name__c</fullName>
    <description>Scholarship Details</description>
    <label>Scholarship Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>