salesforce-main/src/main/default/objects/Activity/fields/Shared_Market_Intelligence__c.field-meta.xml
<CustomField>
    <fullName>Shared_Market_Intelligence__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Did you share market intelligence with the client?</description>
    <label>Shared Market Intelligence</label>
    <type>Checkbox</type>
</CustomField>