salesforce-main/src/main/default/objects/Activity/fields/Specific_Apprenticeships_Discussed__c.field-meta.xml
<CustomField>
    <fullName>Specific_Apprenticeships_Discussed__c</fullName>
    <description>If you discussed specific apprenticeships, which of the following apprenticeships did you discuss?</description>
    <label>Specific Apprenticeships Discussed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Actuarial Technician</fullName>
            </value>
            <value>
                <fullName>Actuary</fullName>
            </value>
            <value>
                <fullName>Assistant Accountant</fullName>
            </value>
            <value>
                <fullName>Professional Accounting / Taxation Technician</fullName>
            </value>
            <value>
                <fullName>Accountancy / Taxation Professional</fullName>
            </value>
            <value>
                <fullName>Business Administrator</fullName>
            </value>
            <value>
                <fullName>Associate Project Manager</fullName>
            </value>
            <value>
                <fullName>Investment Operations Administrator</fullName>
            </value>
            <value>
                <fullName>Investment Operations Technician</fullName>
            </value>
            <value>
                <fullName>Investment Operations Specialist</fullName>
            </value>
            <value>
                <fullName>Financial Services Customer Adviser</fullName>
            </value>
            <value>
                <fullName>Senior Financial Services Customer Adviser</fullName>
            </value>
            <value>
                <fullName>Insurance Practitioner</fullName>
            </value>
            <value>
                <fullName>Insurance Professional</fullName>
            </value>
            <value>
                <fullName>Senior Insurance Professional</fullName>
            </value>
            <value>
                <fullName>Compliance / Risk Officer</fullName>
            </value>
            <value>
                <fullName>Senior Compliance / Risk Specialist</fullName>
            </value>
            <value>
                <fullName>Financial Services Administrator</fullName>
            </value>
            <value>
                <fullName>Financial Services Professional</fullName>
            </value>
            <value>
                <fullName>Senior Investment / Commercial Banking Professional</fullName>
            </value>
            <value>
                <fullName>Mortgage Adviser</fullName>
            </value>
            <value>
                <fullName>Advanced Credit Controller / Debt Collection Specialist</fullName>
            </value>
            <value>
                <fullName>Registered Nurse - Degree (NMC 2010)</fullName>
            </value>
            <value>
                <fullName>Nursing Associate</fullName>
            </value>
            <value>
                <fullName>HR Support</fullName>
            </value>
            <value>
                <fullName>HR Consultant / Partner</fullName>
            </value>
            <value>
                <fullName>Paralegal</fullName>
            </value>
            <value>
                <fullName>Solicitor</fullName>
            </value>
            <value>
                <fullName>Team Leader / Supervisor</fullName>
            </value>
            <value>
                <fullName>Operations / Departmental Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>